--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: premixer
-description: "A new Flutter project."
+description: "A managing app for premixer project."
 publish_to: "none"
 version: 1.0.0+1
 
@@ -13,6 +13,9 @@ dependencies:
   provider: ^6.1.2
   sqflite: ^2.0.0+3
   path: ^1.8.0
+  mockito: ^5.0.0
+  build_runner: ^2.1.4
+  sqflite_common_ffi: ^2.3.3+1
 
 dev_dependencies:
   flutter_test:
