--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,12 +9,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  build_runner: ^2.4.13
   flutter_blue_plus: ^1.33.4
+  mockito: ^5.4.4
+  path: ^1.9.0
   provider: ^6.1.2
-  sqflite: ^2.0.0+3
-  path: ^1.8.0
-  mockito: ^5.0.0
-  build_runner: ^2.1.4
+  sqflite: ^2.4.0
   sqflite_common_ffi: ^2.3.3+1
 
 dev_dependencies:
